# GenAI-Client-Intelligence

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  architecture_docs.md  migration_plan.md  pyproject.toml  sample_conversation.txt  sample_report.json
.streamlit/: config.toml
backend/: assistant.py  llm_service.py  logger.py  models.py  pipeline.py  prompts.py  scoring.py  validators.py
backend/pdf/: __init__.py  components.py  generator.py  preview.py  styles.py
tests/: test_scoring.py  test_validators.py
