[project]
name = "genai-client-intelligence"
version = "0.1.0"
description = "GenAI Client Intelligence Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "matplotlib>=3.11.1",
    "pydantic>=2.0",
    "python-dotenv",
    "reportlab>=5.0.0",
    "streamlit",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.uv]
package = false
