[project]
name = "genai-client-intelligence"
version = "0.1.0"
description = "GenAI Client Intelligence Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-genai>=0.2.0",
    "tenacity>=8.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.11.1",
    "reportlab>=5.0.0",
    "streamlit>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.uv]
package = false
